--- a/packages/storybook/config/manager-head.html
+++ b/packages/storybook/config/manager-head.html
@@ -38,28 +38,28 @@
   /** TODO: Add LATO Font here **/
 
   /* Left side */
-  .os-content {
+  #storybook-explorer-menu {
     font-weight: 500;
   }
 
   /** overwrite toolbar icon color & hover */
-  .os-content button svg path {
+  #storybook-explorer-menu button svg path {
     fill: var(--inovex-elements-n-11);
   }
 
-  .os-content button:hover svg path {
+  #storybook-explorer-menu button:hover svg path {
     fill: var(--inovex-elements-primary);
   }
 
-  .os-content .search-field {
+  #storybook-explorer-menu .search-field {
     margin-top: 0px;
   }
 
-  .os-content .sidebar-header {
+  #storybook-explorer-menu .sidebar-header {
     display: none;
   }
 
-  .os-content .sidebar-subheading {
+  #storybook-explorer-menu .sidebar-subheading {
     /* Title Small */
     letter-spacing: 0.02px;
     font-weight: 600;
@@ -69,7 +69,7 @@
     margin-bottom: 6px;
   }
 
-  .os-content .sidebar-item {
+  #storybook-explorer-menu .sidebar-item {
     color: rgb(16 19 22 / 90%);
     padding-top: 6px;
     padding-bottom: 6px;
@@ -82,7 +82,7 @@
   }
 
   /* skip to canvas button*/
-  .os-content .sidebar-item + a {
+  #storybook-explorer-menu .sidebar-item + a {
     margin-top: 3px;
     z-index: 50;
     background-color: var(--inovex-elements-white);
@@ -90,16 +90,16 @@
     color: var(--inovex-elements-primary);
   }
 
-  .os-content .sidebar-item + a:hover {
+  #storybook-explorer-menu .sidebar-item + a:hover {
     box-shadow: var(--inovex-elements-primary) 0 0 0 1px inset;
   }
 
-  .os-content .sidebar-item + a:active {
+  #storybook-explorer-menu .sidebar-item + a:active {
     background-color: var(--inovex-elements-primary);
     color: var(--inovex-elements-white);
   }
 
-  .os-content .sidebar-item + a:focus {
+  #storybook-explorer-menu .sidebar-item + a:focus {
     background-color: var(--inovex-elements-white);
     box-shadow: var(--inovex-elements-primary) 0 0 0 1px inset,
       rgb(var(--inovex-elements-primary) / 40%) 0 1px 9px 2px;
@@ -108,39 +108,39 @@
   }
 
   /** Sidebar items */
-  .os-content .sidebar-item:focus {
+  #storybook-explorer-menu .sidebar-item:focus {
     color: var(--inovex-elements-primary);
   }
 
-  .os-content .sidebar-item:focus svg {
+  #storybook-explorer-menu .sidebar-item:focus svg {
     color: var(--inovex-elements-primary);
   }
 
-  .os-content .sidebar-item:hover {
+  #storybook-explorer-menu .sidebar-item:hover {
     background-color: var(--inovex-elements-n-1);
   }
 
-  .os-content .sidebar-item[data-selected='false']:focus {
+  #storybook-explorer-menu .sidebar-item[data-selected='false']:focus {
     color: var(--inovex-elements-primary);
     background-color: var(--inovex-elements-p-2);
   }
 
-  .os-content .sidebar-item[data-selected='true'],
-  .os-content .sidebar-item[data-selected='true']:focus {
+  #storybook-explorer-menu .sidebar-item[data-selected='true'],
+  #storybook-explorer-menu .sidebar-item[data-selected='true']:focus {
     color: var(--inovex-elements-primary);
     background-color: var(--inovex-elements-p-3);
   }
 
-  .os-content .sidebar-item[data-selected='true'] svg {
+  #storybook-explorer-menu .sidebar-item[data-selected='true'] svg {
     color: var(--inovex-elements-primary);
   }
 
   /** all sidebar svgs  */
-  .os-content svg {
+  #storybook-explorer-menu svg {
     color: var(--inovex-elements-n-5);
   }
 
-  .os-content .sidebar-header > div > a {
+  #storybook-explorer-menu .sidebar-header > div > a {
     color: var(--inovex-elements-primary);
     font-size: 20px;
     letter-spacing: -0.0083333333em;
