style(storybook): update preview toolbar

--- a/packages/storybook/config/manager-head.html
+++ b/packages/storybook/config/manager-head.html
@@ -159,10 +159,10 @@
   }
 
   div[role="main"] > div > div > div > div:first-child button:hover {
-    background-color: var(--inovex-elements-p-2)
+    background-color: var(--inovex-elements-p-3)
   }
-  
+
   div[role="main"] > div > div > div > div:first-child button:hover svg path {
-    fill: var(--inovex-elements-primary);
+    fill: var(--inovex-elements-p-7);
   }
 </style>
