--- a/packages/storybook/config/manager-head.html
+++ b/packages/storybook/config/manager-head.html
@@ -146,6 +146,28 @@
     letter-spacing: -0.0083333333em;
   }
 
+  /** hide elements title in sidebar */
+  .sidebar-header {
+    display: none;
+  }
+
+  /** remove top-margin */
+  .search-field {
+    margin-top: 0;
+  }
+
+  /** main story content width */
+  .sbdocs.sbdocs-content {
+    max-width: 1018px;
+  }
+
+  /** bottom padding of main story content*/
+  div[role='main'] {
+    bottom: 10px !important;
+    top: 20px !important;
+    height: unset !important;
+  }
+
   /** toolbar on bottom */
   div[role='main'] > div > div > div > div:first-child {
     bottom: 0 !important;
