--- a/packages/storybook/config/preview-head.html
+++ b/packages/storybook/config/preview-head.html
@@ -56,4 +56,8 @@
   .sbdocs.sbdocs-preview > div:first-child a:hover svg path {
     fill: var(--inovex-elements-primary) !important;
   }
+
+  .sbdocs.sbdocs-wrapper {
+    padding: 0 40px 32px !important;
+  }
 </style>
