style(storybook): remove unwanded styling from components

--- a/packages/storybook/config/manager-head.html
+++ b/packages/storybook/config/manager-head.html
@@ -181,7 +181,7 @@
   }
 
   div[role="main"] > div > div > div > div:first-child button:hover {
-    background-color: var(--inovex-elements-p-3)
+    background-color: var(--inovex-elements-p-3);
   }
 
   div[role="main"] > div > div > div > div:first-child button:hover svg path {
