--- a/packages/ui-patterns/src/patterns/login/login.html
+++ b/packages/ui-patterns/src/patterns/login/login.html
@@ -1,29 +1,23 @@
 <div
-  class="h-[682px] w-[565px] bg-white rounded-2xl border border-solid border-inovex-p-5 shadow-2xl"
+  class="h-[682px] w-[565px] bg-white rounded-2xl border border-solid border-inovex-p-5 shadow-2xl grid grid-rows-auto gap-y-8 px-24 py-28"
 >
-  <div class="flex flex-col space-y-8 px-24 py-28 h-full">
-    <div class="space-y-8">
-      <h1 class="text-left">Login to your account</h1>
-      <p class="text-left body-l text-inovex-n-11">
-        A confirmation email is on the way. Please click on the link in the
-        email to complete the registration and secure your discount code.
-      </p>
-    </div>
+  <h1 class="text-left">Login to your account</h1>
+  <p class="text-left body-l text-inovex-n-11 pb-8">
+    Welcome back! Enter your credentials to access your account. This modern
+    login interface is crafted with inovex Elements and Tailwind CSS.
+  </p>
 
-    <div class="space-y-8">
-      <ino-input label="Email" outline type="email"></ino-input>
-      <ino-input label="Password" outline type="password"></ino-input>
-    </div>
+  <ino-input label="Email" outline type="email"></ino-input>
+  <ino-input label="Password" outline type="password"></ino-input>
 
-    <div class="flex justify-between items-center">
-      <ino-checkbox>
-        <span class="body-l text-inovex-n-11">Remember me</span>
-      </ino-checkbox>
-      <a class="body-l"> Forgot your password? </a>
-    </div>
+  <div class="flex justify-between items-center">
+    <ino-checkbox>
+      <span class="body-l text-inovex-n-11">Remember me</span>
+    </ino-checkbox>
+    <a class="body-l">Forgot your password?</a>
+  </div>
 
-    <div class="flex justify-end">
-      <ino-button variant="filled">Login</ino-button>
-    </div>
+  <div class="flex justify-end">
+    <ino-button variant="filled">Login</ino-button>
   </div>
 </div>
