feat: add routing navigation and improve DX

--- a/packages/ui-patterns/src/patterns/login/login.html
+++ b/packages/ui-patterns/src/patterns/login/login.html
@@ -1,5 +1,16 @@
 <div
-  class="h-[682px] w-[565px] bg-white rounded-2xl border border-solid border-inovex-p-5 shadow-2xl grid grid-rows-auto gap-y-8 px-24 py-28"
+  class="
+    h-[682px]
+    w-[565px]
+    bg-white
+    rounded-2xl
+    border border-solid border-inovex-p-5
+    shadow-2xl
+    grid grid-rows-auto
+    gap-y-8
+    px-24
+    py-28
+  "
 >
   <h1 class="text-left">Login to your account</h1>
   <p class="text-left body-l text-inovex-n-11 pb-8">
