chore: format fix

--- a/packages/storybook/config/manager-head.html
+++ b/packages/storybook/config/manager-head.html
@@ -169,15 +169,15 @@
   }
 
   /** overwrite toolbar icon color & hover */
-  div[role="main"] > div > div > div > div:first-child button svg path {
+  div[role='main'] > div > div > div > div:first-child button svg path {
     fill: var(--inovex-elements-n-11);
   }
 
-  div[role="main"] > div > div > div > div:first-child button:hover {
+  div[role='main'] > div > div > div > div:first-child button:hover {
     background-color: var(--inovex-elements-p-3);
   }
 
-  div[role="main"] > div > div > div > div:first-child button:hover svg path {
+  div[role='main'] > div > div > div > div:first-child button:hover svg path {
     fill: var(--inovex-elements-p-7);
   }
 </style>
