--- a/packages/storybook/config/preview-head.html
+++ b/packages/storybook/config/preview-head.html
@@ -33,7 +33,11 @@
     background-color: var(--inovex-elements-p-3);
   }
 
-  .sbdocs.sbdocs-preview > div:first-child:not(.docs-story) button:hover svg path {
+  .sbdocs.sbdocs-preview
+    > div:first-child:not(.docs-story)
+    button:hover
+    svg
+    path {
     fill: var(--inovex-elements-p-7);
   }
 
