refactor(storybook): toolbar on top & white bg

--- a/packages/storybook/config/manager-head.html
+++ b/packages/storybook/config/manager-head.html
@@ -163,9 +163,7 @@
 
   /** toolbar on bottom */
   div[role='main'] > div > div > div > div:first-child {
-    bottom: 0 !important;
-    z-index: 10 !important;
-    top: initial;
+    background-color: var(--inovex-elements-white);
   }
 
   /** overwrite toolbar icon color & hover */
