--- a/packages/storybook/config/manager-head.html
+++ b/packages/storybook/config/manager-head.html
@@ -107,6 +107,7 @@
     min-height: 700px !important;
   }
   
+  /* element to change size of the control panel*/
   .react-draggable:not(:nth-of-type(2n)) {
     margin-top: 11px !important;
   }
