--- a/packages/storybook/config/manager-head.html
+++ b/packages/storybook/config/manager-head.html
@@ -16,63 +16,29 @@
   document.body.classList.add('inovex-elements-theme');
 </script>
 <style type="text/css">
-  div[role='menuitem'] {
-    color: var(--inovex-elements-p-4);
-  }
-
-  div[role='menuitem']:hover,
-  a[class^='css-glamorous-routedlink']:hover {
-    color: var(--inovex-elements-n-7);
-  }
-
-  a[class^='css-glamorous-routedlink'] {
-    color: var(--inovex-elements-n-7);
-  }
-
-  a > h3 {
-    color: var(--inovex-elements-p-7) !important;
-  }
-</style>
-
-<style type="text/css">
   /** TODO: Add LATO Font here **/
 
   /* Left side */
-  .os-content {
+  #storybook-explorer-menu {
     font-weight: 500;
   }
 
-  /** overwrite toolbar icon color & hover */
-  .os-content button svg path {
-    fill: var(--inovex-elements-n-11);
-  }
-
-  .os-content button:hover svg path {
-    fill: var(--inovex-elements-primary);
-  }
-
-  .os-content .search-field {
-    margin-top: 0px;
-  }
-
-  .os-content .sidebar-header {
-    display: none;
-  }
-
-  .os-content .sidebar-subheading {
+  /* siedar headlines (Docs, Structure, Input, Graphic, Buttons, Notification */
+  #storybook-explorer-menu .sidebar-subheading {
     /* Title Small */
     letter-spacing: 0.02px;
     font-weight: 600;
-    color: var(--inovex-elements-n-6);
+    color: var(--inovex-elements-n-7);
     font-size: 14px;
     margin-top: 32px;
     margin-bottom: 6px;
   }
 
-  .os-content .sidebar-item {
-    color: rgb(16 19 22 / 90%);
-    padding-top: 6px;
-    padding-bottom: 6px;
+  /** Sidebar items */
+
+  /* all sidebar items (folders & doc pages & states) */
+  #storybook-explorer-menu .sidebar-item {
+    padding: 6px 0 6px;
     font-size: 14px;
     margin: 0 12px;
     border-radius: 17px;
@@ -81,74 +47,68 @@
     transition: 0.15s ease-in-out;
   }
 
-  /* skip to canvas button*/
-  .os-content .sidebar-item + a {
-    margin-top: 3px;
-    z-index: 50;
-    background-color: var(--inovex-elements-white);
-    box-shadow: var(--inovex-elements-primary) 0 0 0 1px inset;
-    color: var(--inovex-elements-primary);
-  }
-
-  .os-content .sidebar-item + a:hover {
-    box-shadow: var(--inovex-elements-primary) 0 0 0 1px inset;
-  }
-
-  .os-content .sidebar-item + a:active {
-    background-color: var(--inovex-elements-primary);
-    color: var(--inovex-elements-white);
-  }
-
-  .os-content .sidebar-item + a:focus {
-    background-color: var(--inovex-elements-white);
-    box-shadow: var(--inovex-elements-primary) 0 0 0 1px inset,
-      rgb(var(--inovex-elements-primary) / 40%) 0 1px 9px 2px;
-    color: var(--inovex-elements-primary);
-    z-index: 50;
-  }
-
-  /** Sidebar items */
-  .os-content .sidebar-item:focus {
-    color: var(--inovex-elements-primary);
-  }
-
-  .os-content .sidebar-item:focus svg {
-    color: var(--inovex-elements-primary);
-  }
-
-  .os-content .sidebar-item:hover {
+  #storybook-explorer-menu .sidebar-item:hover {
     background-color: var(--inovex-elements-n-1);
   }
 
-  .os-content .sidebar-item[data-selected='false']:focus {
-    color: var(--inovex-elements-primary);
+  /* Sidebar item selected */
+  #storybook-explorer-menu .sidebar-item[data-selected='true'] {
     background-color: var(--inovex-elements-p-2);
   }
 
-  .os-content .sidebar-item[data-selected='true'],
-  .os-content .sidebar-item[data-selected='true']:focus {
-    color: var(--inovex-elements-primary);
+  #storybook-explorer-menu .sidebar-item[data-selected='true'] svg {
+    color: var(--inovex-elements-primary) !important;
+  }
+
+  /* Sidebar item deselected */
+  #storybook-explorer-menu .sidebar-item[data-selected='false'] a,
+  #storybook-explorer-menu .sidebar-item[data-selected='false'] svg,
+  #storybook-explorer-menu svg {
+    color: var(--inovex-elements-n-6) !important;
+  }
+
+  /** hide elements title in sidebar */
+  .sidebar-header {
+    display: none;
+  }
+
+  /** remove top-margin */
+  .search-field {
+    margin-top: 0;
+  }
+
+  /** bottom padding of main story content*/
+  div[role='main'] {
+    margin: 20px 0 10px;
+    bottom: 0px !important;
+    top: 0px !important;
+    height: unset !important;
+  }
+
+  /** toolbar on bottom */
+  div[role='main'] > div > div > div > div:first-child {
+    background-color: var(--inovex-elements-white);
+  }
+
+  /** overwrite toolbar icon color & hover */
+  div[role='main'] > div > div > div > div:first-child button svg path {
+    fill: var(--inovex-elements-n-11);
+  }
+
+  div[role='main'] > div > div > div > div:first-child button:hover {
     background-color: var(--inovex-elements-p-3);
   }
 
-  .os-content .sidebar-item[data-selected='true'] svg {
-    color: var(--inovex-elements-primary);
+  div[role='main'] > div > div > div > div:first-child button:hover svg path {
+    fill: var(--inovex-elements-p-7);
   }
 
-  /** all sidebar svgs  */
-  .os-content svg {
-    color: var(--inovex-elements-n-5);
+  #storybook-panel-root {
+    min-height: 700px !important;
   }
 
-  .os-content .sidebar-header > div > a {
-    color: var(--inovex-elements-primary);
-    font-size: 20px;
-    letter-spacing: -0.0083333333em;
-  }
-
-  div[role='main'] .os-host {
-    bottom: 0 !important;
-    z-index: 10 !important;
-    top: initial;
+  /* element to change size of the control panel*/
+  .react-draggable:not(:nth-of-type(2n)) {
+    margin-top: 11px !important;
   }
 </style>
