--- a/packages/storybook/config/preview-body.html
+++ b/packages/storybook/config/preview-body.html
@@ -1,9 +1,1 @@
-<style>
-  html {
-    font-size: 16px;
-  }
-
-  .sbdocs.sbdocs-wrapper {
-    padding: 0 20px 2rem 20px;
-  }
-</style>
+<style></style>
